  * Added the "lastFocus" class for message styles to the latest message received while the chat didn't have focus, and "regainedFocus" for the first message received while the chat has regained focus after having previously lost it.
  * Made emoticons between packs more consistent. (#11450)
  * Fixed the ":^)" emoticon being mistakenly interpreted the same as ":-\". (#13924)

 Status
 * Added ability to change which track information the "iTunes" status displays. (#6373)
 
 Transcript Viewer
  * Added next/previous buttons for highlighted search terms within a transcript (similar to Safari).
  * Greatly improved reliability and speed of log indexing and search.
  * Fixed a bug when writing inline images to chat logs. (Peter Fung) (#15186)

 User Picture (Buddy Icon)
  * Added ability to resize animated gifs that are too large. (#9885)
  * Image wells for changing user picture support drag & drop and will also open the Image Picker to edit the image if it's too large or not of square shape. (20% off shape)
 
 Preferences
  * Fixed some bad user interface behaviour in the "Customise..." sheet for dock  icon in the "Appearance" pane. (#15158)
  * Improved wording and alignment in the "Status" pane. (ctbeiser) (#15370)

 AIM
  * Added a preference for AIM: "allow multiple sign in locations" defaulting to true. (Josh Perry) (#5790)
  * Fixed crash when sending certain group chat requests. (#15674)
  
 StatusNet
  * Allow overriding the 140 character limit for StatusNet. (brion) (#13485)

 XMPP
  * Added support for supported characters in Jabber IDs. (Marc Kalmes) (#13099)

 Xtras
  * Added version numbers for Xtras to Xtras Manager. (Ariel Chinn) (#11285)
  * Fixed case in the path for the iChat emoticons. (#14936)
  * Group chat userlists and the status icons selection menu in the appearances preferences now use the tab version of status icons. (#13838)
  * Fixed Xtras not displaying after Xtras Manager did load.

 VoiceOver