@@ -1,6 +1,8 @@
 Adium 1.5b8
  * Twitter: Use the non-truncated version of retweets if they are included. (#15226)
  * Fixed setting a global shortcut which used the letter "a". (#12013)
+ * Disabled elastic scroll in the text input of the message view.
+ * Disabled elastic scroll in Change User Picture Menu.
 
 Adium 1.5b7
  * Make sure nibs are not stripped so they can be localized.
