@@ -68,6 +68,7 @@ Version 1.5 (10/11/2011)
   * Added the "lastFocus" class for message styles to the latest message received while the chat didn't have focus, and "regainedFocus" for the first message received while the chat has regained focus after having previously lost it.
   * Made emoticons between packs more consistent. (#11450)
   * Fixed the ":^)" emoticon being mistakenly interpreted the same as ":-\". (#13924)
+  * Disabled elastic scroll of the text input, in Lion.
 
  Status
  * Added ability to change which track information the "iTunes" status displays. (#6373)
